fix(favorites): spacing elements

--- a/src/pages/Favorites/favorites.css
+++ b/src/pages/Favorites/favorites.css
@@ -16,6 +16,7 @@
 .favoritesContainer ul > li {
   justify-content: space-between;
   width: 100%;
+  padding: var(--spacing);
 }
 
 .btnGroup {
